--- a/hw7/hw7.qmd
+++ b/hw7/hw7.qmd
@@ -10,7 +10,7 @@ format:
         code-copy: true
 ---
 ## Summary:
-- This project involves the creation of a database to capture the collective skills, certifications, and roles of employees in our company. The database is structured into five primary tables: `skills`, `people`, `peopleskills`, `roles`, and `people_roles`. Each table serves a specific function, from storing employee information to detailing their skills and roles within the company. This database will assist in identifying skill gaps, employee qualifications, and role assignments.
+- This project involves the creation of a database to capture the collective skills, certifications, and roles of employees in our company. The database is structured into five primary tables: `skills`, `people`, `peopleskills`, `roles`, and `peopleroles`. Each table serves a specific function, from storing employee information to detailing their skills and roles within the company. This database will assist in identifying skill gaps, employee qualifications, and role assignments.
 
 
 GITHUB URL:  <https://github.com/cmsc-vcu/cmsc508-fa2023-hw7-zachmcd09
@@ -83,11 +83,18 @@ except ProgrammingError as e:
 except Exception as e:
     print(f"An error occurred:\n{str(e)}\n")
 
+def execute(query, connection):
+    try:
+        sql_query = pd.read_sql(query, connection)
+        print(sql_query)
+    except Exception as e:
+        print(f"An error occurred: {e}")
+
 ```
 
 ## Overview and description
 
-This project involves the creation of a database to capture the collective skills, certifications, and roles of employees in our company. The database is structured into five primary tables: `skills`, `people`, `peopleskills`, `roles`, and `people_roles`. Each table serves a specific function, from storing employee information to detailing their skills and roles within the company. This database will assist in identifying skill gaps, employee qualifications, and role assignments.
+This project involves the creation of a database to capture the collective skills, certifications, and roles of employees in our company. The database is structured into five primary tables: `skills`, `people`, `peopleskills`, `roles`, and `peopleroles`. Each table serves a specific function, from storing employee information to detailing their skills and roles within the company. This database will assist in identifying skill gaps, employee qualifications, and role assignments.
 
 ## Crows-foot diagram
 
@@ -148,25 +155,52 @@ For the people, skills, and roles tables, provide a description of each table an
 
 The `people` table contains detailed information about each employee, including their name, contact details, professional links, and the date they joined the company. It serves as a central repository for employee data.
 
-- **Data:**
 ```{python}
 #| echo: false
 #| eval: true
-sql = f"""
+
+sql_query = pd.read_sql("""
 select
-    *
-from
-    people;
+  *
+from 
+  information_schema.columns
+where 
+  table_schema='23FA_users_zcmcdonough';
 """
-## Add code to list roles table here
-try:
-    df = pd.read_sql(sql,cnx)
-    df
-except Exception as e:
-    message = str(e)
-    print(f"An error occurred:\n\n{message}\n\nIgnoring and moving on.")
-    df = pd.DataFrame()
-df
+,cnx)
+
+sql_query.head(15)
+
+def show_table( table_name ):
+    """ Show a table using Display and Markdown """
+    # Note the use of f-strings to embed the variable name.
+    query = f"""
+    select
+        ordinal_position,column_name,column_type,column_key, is_nullable
+    from
+        information_schema.columns
+    where
+    table_schema='23FA_users_zcmcdonough'
+        and table_name='{table_name}'
+    order by 
+        ordinal_position;
+    """
+    sql_query = pd.read_sql( query, cnx )
+    display(Markdown(f"**Table: {table_name}** \n"))
+    display(Markdown(tabulate(
+       sql_query,
+       headers=['Pos','Name','Type','Key','IsNull'],
+       showindex= False
+        )
+    )
+)  
+
+
+table_names = cnx.connect().execute(text("show tables"))
+for table_name in table_names:
+    if table_name[0] == 'people':
+        show_table(table_name[0])
+
 ```
 
 ### Skills table
@@ -230,35 +264,14 @@ Below is a list of data in the *roles* table.
 ```{python}
 #| echo: false
 #| eval: true
-sql = f"""
-select * from roles;
-"""
-## Add code to list roles table here
-try:
-    df = pd.read_sql(sql,cnx)
-    df
-except Exception as e:
-    message = str(e)
-    print(f"An error occurred:\n\n{message}\n\nIgnoring and moving on.")
-    df = pd.DataFrame()
-df
-```
 
-### Skills table
-- The `skills` table catalogues various skills and certifications available or acquired within our company. Each skill is described along with its learning commitment and a URL for more information.
-
-
-```{python}
-#| echo: false
-#| eval: true
-
-sql_query = pd.read_sql(f"""
+sql_query = pd.read_sql("""
 select
   *
 from 
   information_schema.columns
 where 
-  table_schema='23FA_users_zcmcdonough'
+  table_schema='23FA_users_zcmcdonough';
 """
 ,cnx)
 
@@ -268,26 +281,34 @@ def show_table( table_name ):
     """ Show a table using Display and Markdown """
     # Note the use of f-strings to embed the variable name.
     query = f"""
-select
-  ordinal_position,column_name,column_type,column_key, is_nullable
-from
-  information_schema.columns
-where
-  table_schema='23FA_users_zcmcdonough'
-  and table_name='{table_name}'
-order by 
-  ordinal_position
-"""
+    select
+        ordinal_position,column_name,column_type,column_key, is_nullable
+    from
+        information_schema.columns
+    where
+    table_schema='23FA_users_zcmcdonough'
+        and table_name='{table_name}'
+    order by 
+        ordinal_position;
+    """
     sql_query = pd.read_sql( query, cnx )
     display(Markdown(f"**Table: {table_name}** \n"))
+    display(Markdown(tabulate(
+       sql_query,
+       headers=['Pos','Name','Type','Key','IsNull'],
+       showindex= False
+        )
+    )
+)  
 
 
 table_names = cnx.connect().execute(text("show tables"))
 for table_name in table_names:
-    if table_name == 'skills':
+    if table_name[0] == 'roles':
         show_table(table_name[0])
 
 ```
+
 
 
 ## Sample queries
@@ -296,18 +317,17 @@ Let's explore the database!
 
 # List skill names, tags, and descriptions ordered by name
 
-(here a sample query)
 
 ```{python}
 query = """
 SELECT name, tag, description
-FROM skills
+FROM 23FA_users_zcmcdonough.skills
 ORDER BY name;
 """
 
 try:
-    sql_query = pd.read_sql(query, cnx)
-    print(sql_query)
+    df = pd.read_sql(query, cnx)
+    print(df)
 except Exception as e:
     print(f"An error occurred: {e}")
 
@@ -316,84 +336,49 @@ except Exception as e:
 
 (and here is a sample result from the query)
 
-```{python}
-#| echo: false
-#| eval: true
-
-sql_query.head(15)
-sql_query
-
-def show_table( table_name ):
-    display(Markdown(f"**Table: {table_name}** \n"))
-    display(Markdown(tabulate(
-       sql_query,
-       headers=['Pos','Name','Type','Key','Null?'],
-       showindex= False
-    )))
-
-
-table_names = cnx.connect().execute(text("show tables"))
-for table_name in table_names:
-  show_table(table_name[0])
-```
 
 
 ### List people names and email addresses ordered by last_name
 ```{python}
 query = """
 SELECT first_name, last_name, email
-FROM people
+FROM 23FA_users_zcmcdonough.people
 ORDER BY last_name;
 """
 
-df = pd.read_sql(query, cnx)
-
+try:
+    df = pd.read_sql(query, cnx)
+    print(df)
+except Exception as e:
+    print(f"An error occurred: {e}")
 
 ```
 
 ### List skill names of Person 1
-DELIMITER //
 
-CREATE PROCEDURE ListSkillsOfPerson1()
-BEGIN
-    SELECT s.name 
-    FROM skills s 
-    JOIN peopleskills ps ON s.id = ps.skills_id 
-    WHERE ps.people_id = 1;
-END //
-
-DELIMITER ;
 ```{python}
 query = """
 SELECT s.name
-FROM skills s
+FROM 23FA_users_zcmcdonough.skills s
 JOIN peopleskills ps
 ON s.id = ps.skills_id
 WHERE ps.people_id = 1
 """
-df = pd.read_sql(query, cnx)
-
+try:
+    df = pd.read_sql(query, cnx)
+    print(df)
+except Exception as e:
+    print(f"An error occurred: {e}")
 
 
 ```
 
 
 ### List people names with Skill 6
-DELIMITER //
-
-CREATE PROCEDURE ListPeopleWithSkill6()
-BEGIN
-    SELECT p.first_name, p.last_name 
-    FROM people p 
-    JOIN peopleskills ps ON p.id = ps.people_id 
-    WHERE ps.skills_id = 6;
-END //
-
-DELIMITER ;
 ```{python}
 query = """
     SELECT p.first_name, p.last_name 
-    FROM people p 
+    FROM 23FA_users_zcmcdonough.people p 
     JOIN peopleskills ps
     ON p.id = ps.people_id 
     WHERE ps.skills_id = 6
@@ -411,123 +396,84 @@ except Exception as e:
 ```
 
 ### List people with a DEVELOPER role
-DELIMITER //
-
-CREATE PROCEDURE ListPeopleWithDeveloperRole()
-BEGIN
-    SELECT p.first_name, p.last_name 
-    FROM people p 
-    JOIN people_roles pr ON p.id = pr.people_id 
-    JOIN roles r ON pr.role_id = r.id 
-    WHERE r.name = 'DEVELOPER';
-END //
-
-DELIMITER ;
 ```{python}
 query = """
 SELECT p.first_name, p.last_name
-FROM people p
-JOIN people_roles pr ON p.id = pr.people_id
+FROM 23FA_users_zcmcdonough.people p
+JOIN peopleroles pr ON p.id = pr.people_id
 JOIN roles r ON pr.role_id = r.id
 WHERE r.name = 'DEVELOPER';
 """
 
 
-# Calling a stored procedure and displaying its result
-df = pd.read_sql(query, cnx)
-df
+try:
+    df = pd.read_sql(query, cnx)
+    print(df)
+except Exception as e:
+    print(f"An error occurred: {e}")
 
 
 ```
 
 ### List names and email addresses of people without skills
-DELIMITER //
 
-CREATE PROCEDURE ListPeopleWithoutSkills()
-BEGIN
-    SELECT p.first_name, p.last_name, p.email 
-    FROM people p 
-    WHERE NOT EXISTS (
-        SELECT 1 
-        FROM peopleskills ps 
-        WHERE p.id = ps.people_id
-    );
-END //
 
 DELIMITER ;
 ```{python}
 query = """
 SELECT p.first_name, p.last_name, p.email
-FROM people p
+FROM 23FA_users_zcmcdonough.people p
 WHERE NOT EXISTS (
     SELECT 1
-    FROM peopleskills ps
+    FROM 23FA_users_zcmcdonough.peopleskills ps
     WHERE p.id = ps.people_id
 );
 """
 
 
-# Calling a stored procedure and displaying its result
-df = pd.read_sql(query, cnx)
-df
+try:
+    df = pd.read_sql(query, cnx)
+    print(df)
+except Exception as e:
+    print(f"An error occurred: {e}")
 
 
 ```
 
 ### List names and tags of unused skills
-DELIMITER //
 
-CREATE PROCEDURE ListUnusedSkills()
-BEGIN
-    SELECT s.name, s.tag 
-    FROM skills s 
-    WHERE NOT EXISTS (
-        SELECT 1 
-        FROM peopleskills ps 
-        WHERE s.id = ps.skills_id
-    );
-END //
 
 DELIMITER ;
 ```{python}
 query = """
 SELECT s.name, s.tag
-FROM skills s
+FROM 23FA_users_zcmcdonough.skills s
 WHERE NOT EXISTS (
     SELECT 1
-    FROM peopleskills ps
+    FROM 23FA_users_zcmcdonough.peopleskills ps
     WHERE s.id = ps.skills_id
 );
 """
 
 
-# Calling a stored procedure and displaying its result
-df = pd.read_sql(query, cnx)
-df
+try:
+    df = pd.read_sql(query, cnx)
+    print(df)
+except Exception as e:
+    print(f"An error occurred: {e}")
 
 
 ```
 
 ### List people names and skill names with the BOSS role
-DELIMITER //
 
-CREATE PROCEDURE ListPeopleAndSkillsWithBossRole()
-BEGIN
-    SELECT p.first_name, p.last_name, s.name AS skill_name 
-    FROM people p 
-    JOIN people_roles pr ON p.id = pr.people_id 
-    JOIN roles r ON pr.role_id = r.id 
-    JOIN peopleskills ps ON p.id = ps.people_id 
-    JOIN skills s ON ps.skills_id = s.id 
-    WHERE r.name = 'BOSS';
-END //
 
 DELIMITER ;
 ```{python}
 query = """
 SELECT p.first_name, p.last_name, s.name AS skill_name
-FROM people p
-JOIN people_roles pr ON p.id = pr.people_id
+FROM 23FA_users_zcmcdonough.people p
+JOIN peopleroles pr ON p.id = pr.people_id
 JOIN roles r ON pr.role_id = r.id
 JOIN peopleskills ps ON p.id = ps.people_id
 JOIN skills s ON ps.skills_id = s.id
@@ -535,28 +481,18 @@ WHERE r.name = 'BOSS';
 """
 
 
-# Calling a stored procedure and displaying its result
-df = pd.read_sql(query, cnx)
-df
+try:
+    df = pd.read_sql(query, cnx)
+    print(df)
+except Exception as e:
+    print(f"An error occurred: {e}")
 
 
 ```
 
 ### List ids and names of unused roles
-DELIMITER //
 
-CREATE PROCEDURE ListUnusedRoles()
-BEGIN
-    SELECT r.id, r.name 
-    FROM roles r 
-    WHERE NOT EXISTS (
-        SELECT 1 
-        FROM people_roles pr 
-        WHERE r.id = pr.role_id
-    );
-END //
 
-DELIMITER ;
 ```{python}
 query = ("""
     select
@@ -567,20 +503,34 @@ query = ("""
         last_name
     """)
 
-# Calling a stored procedure and displaying its result
-df = pd.read_sql(query, cnx)
-df
+try:
+    df = pd.read_sql(query, cnx)
+    print(df)
+except Exception as e:
+    print(f"An error occurred: {e}")
 
 
 ```
 
 # Calling a stored procedure and displaying its result
-df = pd.read_sql("CALL ListPeopleOrderedByLastName()", cnx)
-df
+```{python}
+# Name of the stored procedure
+stored_procedure_name = "MyStoredProcedure"
+
+# Format the call command
+call_command = f"CALL {stored_procedure_name}();"
+
+try:
+    # Execute the stored procedure and fetch the results
+    result = pd.read_sql(call_command, cnx)
+    print(result)
+except Exception as e:
+    print(f"An error occurred: {e}")
+
+```
 
 
 
 ## Reflection
 
-(Write a paragraph expressing your thoughts, feelings, and insights about your experience with this assignment.  Pause and breath before writing - I'm trying to encourage critical thinking and self-awareness while allowing you to explore the connections between theory and practice. And yes, delete this paragraph.)
-
+- This assignment has given me real world practice with using SQL to create an efficient and strucutred database. I really enjoyed learning how the SQL queries can be a powerful tool for referencing databse compared to methods in traditional databases. The project has given me the opportunity to appreciate the detail that goes into planning and structuring a database as it will be significantly more impactful over the life of the database and for future developers that work on it than the best comments we could include with it. 
